# zblog

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.bat
apps/api/: Dockerfile  pyproject.toml
apps/api/blog_api/: __init__.py  auth.py  config.py  database.py  main.py  markdown_utils.py  models.py  schemas.py  seed.py  services.py  utils.py
apps/api/blog_api/routers/: admin.py  public.py
apps/api/tests/: test_api.py  test_config.py
apps/web-admin/: Dockerfile  index.html  package.json  vite.config.js
apps/web-admin/src/: App.jsx  main.jsx  styles.css
apps/web-admin/src/components/: AdminShell.jsx  Notice.jsx
apps/web-admin/src/lib/: api-base.test.js  api.js  article-form.js  article-form.test.js  category-tree.js  category-tree.test.js  format.js
apps/web-admin/src/pages/: ArticleEditorPage.jsx  ArticleListPage.jsx  CategoryPage.jsx  LoginPage.jsx  MediaPage.jsx  SettingsPage.jsx  SetupPage.jsx  SidebarPage.jsx  TagPage.jsx
apps/web-public/: Dockerfile  next.config.mjs  package.json
apps/web-public/app/: globals.css  layout.jsx  page.jsx
apps/web-public/components/: article-body.jsx  article-list.jsx  article-toc.jsx  blog-shell.jsx  category-filter.jsx  search-box.jsx  sidebar-region.jsx  tag-cloud.jsx  theme-script.jsx  theme-toggle.jsx  view-tracker.jsx
apps/web-public/lib/: api.js  article-toc.js  article-toc.test.js  formatting.js  formatting.test.js
docs/superpowers/specs/: 2026-04-24-blog-redesign-design.md
scripts/: start-dev.ps1  start-next-direct.cjs
(+1 files in other folders)
