[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-api"
version = "0.1.0"
description = "FastAPI backend for the personal blog system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "markdown-it-py>=3.0.0,<4.0.0",
  "mdit-py-plugins>=0.4.0,<1.0.0",
  "pygments>=2.19.0,<3.0.0",
  "bleach>=6.2.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blog_api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

